--- a/style.css
+++ b/style.css
@@ -164,3 +164,11 @@
     color: green;
     margin-right: 5px;
   }
+  .icone {
+    width: 3%;
+    height: auto;
+  }
+  .icone2 {
+    width: 10%;
+    height: auto;
+  }
